--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar{
+  display: flex;
+  flex-direction: row;
+  height: 35px;
+  padding-top: 10px;
+  border: 3px solid white;
+  justify-content: space-evenly;
+  background-color: red;
+  text-align: center;
+  list-style: none;
+}
+
+.elemento{
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+
+.elemento:hover{
+  
+  color: white;
+}
+
+
