--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.navbar{
-  display: flex;
-  flex-direction: row;
-  height: 35px;
-  padding-top: 10px;
-  border: 3px solid white;
-  justify-content: space-evenly;
-  background-color: red;
-  text-align: center;
-  list-style: none;
-}
-
-.elemento{
-  color: black;
-  text-decoration: none;
-  font-size: 20px;
-  padding-bottom: 5px;
-}
-
-.elemento:hover{
-  
+a {
   color: white;
+  text-decoration: none;
 }
 
 
